--- a/building-a-favourite-page/favourite.html
+++ b/building-a-favourite-page/favourite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Favourites</title>
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/favourites.js" defer type="module"></script>
+    <script src="js/favourite.js" defer type="module"></script>
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="favourites.html">
+                    <a href="favourite.html">
                         Favourites
                     </a>
                 </li>
